--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -6,10 +6,10 @@ h1, h2, h3, h4, h5, h6 { margin:0; padding:0; }
 ul, lo, li { margin:0; padding:0; list-style:none; }
 
 
-section#content {float:left; width:calc(100vw-200px)!important; margin-top:10px; margin-left:200px;}
-section#container::after { content:""; display:block; clear:both; }	
+section#content {float:left; flex:1; width:calc(100vw-200px)!important; margin-top:10px; margin-left:200px;}
+section#container::after { content:""; display:flex; min-height:100vh; flex-direction:column; clear:both; }	
 
-aside#aside {height:auto; width:180px; position:fixed; z-index:1; padding-top:20px;}
+aside#aside {float:left; height:auto; width:180px; position:fixed; z-index:1; padding-top:20px;}
 aside#aside h3 { font-size:22px; margin-bottom:20px; text-align:center; }
 aside#aside li { font-size:16px; text-align:center; }
 aside#aside li a { color:#000; display:block; padding:10px 0; }
@@ -31,10 +31,9 @@ aside#aside li > ul.low li { width:180px; }
  footer#footer { 
  	background:#f1f1f1;
  	text-align:center;
-    position:fixed;
+ 	display:grid;
     left:0;
     bottom:0;
-    width:100%;
     height:70px;    
     border-radius:50px 50px 0 0;
    	}
